--- a/sass/partials/_dialogs.scss
+++ b/sass/partials/_dialogs.scss
@@ -534,3 +534,13 @@ table {
         flex-direction: column;
     }
 }
+
+@include MQ(M) {
+    .invoiceHeaderRow > td{
+        width: 200px;
+
+        &.col_anchor {
+            min-width: 300px;
+        }
+    }
+}
